book/tests/snapshots/snapshot__run_display_reference_prql@queries__syntax-7.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/queries/syntax-7.prql
---
prql sql_dialect:mysql



from employees
select `first name`



