book/tests/snapshots/snapshot__run_display_reference_prql@queries__syntax-8.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/queries/syntax-8.prql
---
prql sql_dialect:postgres



from employees
select `first name`



