book/tests/snapshots/snapshot__run_display_reference_prql@queries__variables-0.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/queries/variables-0.prql
---
let top_50 = (
  from employees
  sort salary
  take 50
  aggregate [total_salary = sum salary]
)



from top_50



